tests/paczka1/small_fuzzy/36680397.err
Error in line 1: mCX S533 1,6
Error in line 5: rkjP8b9d4FS S533 41,4
